--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -17,8 +17,16 @@
 					'yyyy-MM-dd HH:mm')}"></div>
                 </div>
             </div>
+			<div class="my-3">
+				<a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary" 
+				sec:authorize="isAuthenticated()"
+				th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+				th:text="수정"></a>
+			</div>
         </div>
     </div>
+	
+	
     <!-- 답변의 갯수 표시 -->
     <h5 class="border-bottom my-3 py-2" 
         th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
@@ -32,14 +40,21 @@
 					<div class="mb-2">
 						<span th:if="${answer.author != null}" th:text="${answer.author.username}"></span>
 					</div>
-					
                     <div th:text="${#temporals.format(answer.createDate, 
 					'yyyy-MM-dd HH:mm')}"></div>
                 </div>
             </div>
+			<div class="my-3">
+				<a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary" 
+					sec:authorize="isAuthenticated()"
+					th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+					th:text="수정"></a>
+			</div>
         </div>
     </div>
     <!-- 답변 반복 끝  -->
+	
+	
     <!-- 답변 작성 -->
     <form th:action="@{|/answer/create/${question.id}|}" th:object="${answerForm}"| 
 	method="post" class="my-3">
