--- a/sbb/src/main/resources/templates/layout.html
+++ b/sbb/src/main/resources/templates/layout.html
@@ -18,5 +18,10 @@
 	<!-- 기본 템플릿 안에 삽입될 내용 End -->
 	<!--	Bootstrap Js-->
 	<script th:src="@{/bootstrap.min.js}"></script>
+	
+	<!--자바스크립트 시작-->
+	<th:block layout:fragment="script"></th:block>
+	<!--자바스크립트 끝-->
+
 </body>
 </html>
