현재 작업중인 내용

--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -125,6 +125,12 @@
 			};
 		});
 	});
+	// 추천기능을 ajax로 구현하는 중인데 게속 실패하는중..
+	// 로그인 되어있을때만 추천버튼이 작동해야하고
+	// 추천을 누른 상태면 버튼의 글씨가 추천 취소로 바뀌어야 하고
+	// 추천을 누르면 정말로 추천하시겠습니까?
+	// 추천 취소를 누르면 정말로 추천을 취소하시겠습니까?
+	// 비 로그인 상태에서 누르면 로그인 하시겠습니까? 물은 뒤에 확인을 누르면 로그인 창으로 보내주는 것을 구현하고 싶음
 </script>
 
 </html>
