--- a/sbb/src/main/resources/templates/answer_form.html
+++ b/sbb/src/main/resources/templates/answer_form.html
@@ -11,5 +11,10 @@
 		<input type="submit" value="저장하기" class="btn btn-primary my-2">
 	</form>
 </div>
+<script>
+	// 마크다운에디터
+	var simplemde = new SimpleMDE({element: document.getElementById("content")});
+</script>
+
 
 </html>
