--- a/sbb/src/main/resources/templates/layout.html
+++ b/sbb/src/main/resources/templates/layout.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
+	<!-- 마크다운 에디터-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+	<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 	<title>Hello, sbb!</title>
 </head>
+
 <body>
 	<!-- 네비게이션바 -->
 	<nav th:replace="~{navbar :: navbarFragment}"></nav>
@@ -18,10 +23,11 @@
 	<!-- 기본 템플릿 안에 삽입될 내용 End -->
 	<!--	Bootstrap Js-->
 	<script th:src="@{/bootstrap.min.js}"></script>
-	
+
 	<!--자바스크립트 시작-->
 	<th:block layout:fragment="script"></th:block>
 	<!--자바스크립트 끝-->
 
 </body>
+
 </html>
