--- a/sbb/src/main/resources/templates/question_form.html
+++ b/sbb/src/main/resources/templates/question_form.html
@@ -19,5 +19,9 @@
       	<input type="submit" value="저장하기" class="btn btn-primary my-2">
    </form>
 </div>
+<script>
+	// 마크다운에디터
+	var simplemde = new SimpleMDE({element: document.getElementById("content")});
+</script>
 
 </html>
