--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -104,7 +104,8 @@
 		th:field="*{content}" class="form-control" rows="10"></textarea>
 		
 		
-        <input type="submit" value="답변등록" class="btn btn-primary my-2">
+        <input sec:authorize="isAnonymous()" disabled type="submit" value="답변등록" class="btn btn-primary my-2">
+		<input sec:authorize="isAuthenticated()" type="submit" value="답변등록" class="btn btn-primary my-2">
     </form>
 </div>
 
