댓글 페이징 오류 발생 수정 필요

--- a/sbb/src/main/resources/templates/question_detail.html
+++ b/sbb/src/main/resources/templates/question_detail.html
@@ -166,6 +166,10 @@
 	// 추천을 누르면 정말로 추천하시겠습니까?
 	// 추천 취소를 누르면 정말로 추천을 취소하시겠습니까?
 	// 비 로그인 상태에서 누르면 로그인 하시겠습니까? 물은 뒤에 확인을 누르면 로그인 창으로 보내주는 것을 구현하고 싶음
+	
+	
+	// 댓글 페이징 기능 댓글 10개 단위로 페이지가 넘어가야하는데 10개 단위마다 댓글이 표시되지않는 현상 발생
+	// 수정필요
 </script>
 
 </html>
