--- a/sbb/src/main/resources/templates/navbar.html
+++ b/sbb/src/main/resources/templates/navbar.html
@@ -14,7 +14,10 @@
 					th:href="@{/user/logout}">로그아웃</a>
 	            </li>
 				<li class="nav-item">
-					<a class="nav-link" th:href="@{/user/signup}">회원가입</a>
+					<a class="nav-link" sec:authorize="isAnonymous()"
+					th:href="@{/user/signup}">회원가입</a>
+					<a class="nav-link" sec:authorize="isAuthenticated()"
+					th:href="@{/user/userDetail}">회원정보</a>
 				</li>
 	         </ul>
 	      </div>
