--- a/sbb/src/main/resources/templates/question_form.html
+++ b/sbb/src/main/resources/templates/question_form.html
@@ -1,23 +1,27 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container">
-   <h5 class="my-3 border-bottom pb-2">질문등록</h5>
-   <form th:object="${questionForm}" method="post">
-		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-<!--		<div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">-->
-<!--			<div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>-->
-<!--		</div>-->
-<!--		위에 세줄이 아래 한줄로 대체됨-->
-		<div th:replace="~{form_errors :: formErrorsFragment}"></div>      
+	<h5 class="my-3 border-bottom pb-2">질문등록</h5>
+	<form th:object="${questionForm}" method="post">
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+		<!--		<div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">-->
+		<!--			<div th:each="err : ${#fields.allErrors()}" th:text="${err}"/>-->
+		<!--		</div>-->
+		<!--		위에 세줄이 아래 한줄로 대체됨-->
+		<div th:replace="~{form_errors :: formErrorsFragment}"></div>
+<!--		<select class="category" name="category" required>-->
+<!--			<option value="1">질문</option>-->
+<!--			<option value="2">기타</option>-->
+<!--		</select>-->
 		<div class="mb-3">
-         	<label for="subject" class="form-label">제목</label>
-         	<input type="text" th:field="*{subject}" class="form-control">
-      	</div>
-      	<div class="mb-3">
-         	<label for="content" class="form-label">내용</label>
-         	<textarea th:field="*{content}" class="form-control" rows="10"></textarea>
-      	</div>
-      	<input type="submit" value="저장하기" class="btn btn-primary my-2">
-   </form>
+			<label for="subject" class="form-label">제목</label>
+			<input type="text" th:field="*{subject}" class="form-control">
+		</div>
+		<div class="mb-3">
+			<label for="content" class="form-label">내용</label>
+			<textarea th:field="*{content}" class="form-control" rows="10"></textarea>
+		</div>
+		<input type="submit" value="저장하기" class="btn btn-primary my-2">
+	</form>
 </div>
 <script layout:fragment="script" type='text/javascript'>
 	// 마크다운에디터
