컨트롤러 크리에이트, Get 모디파이, Post 모디파이 서비스 메소드(크리에이트, 모디파이) question, +form question_form.html 수정

--- a/sbb/src/main/resources/templates/question_form.html
+++ b/sbb/src/main/resources/templates/question_form.html
@@ -8,10 +8,10 @@
 		<!--		</div>-->
 		<!--		위에 세줄이 아래 한줄로 대체됨-->
 		<div th:replace="~{form_errors :: formErrorsFragment}"></div>
-<!--		<select class="category" name="category" required>-->
-<!--			<option value="1">질문</option>-->
-<!--			<option value="2">기타</option>-->
-<!--		</select>-->
+		<select class="category" name="category" required>
+			<option value="질문">질문</option>
+			<option value="기타">기타</option>
+		</select>
 		<div class="mb-3">
 			<label for="subject" class="form-label">제목</label>
 			<input type="text" th:field="*{subject}" class="form-control">
